feat: adding whatapp bubble

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
     --chart-5: 27 87% 67%;
 
     /* Custom Colors */
-    --color-green-accent: D01B17;
+    --color-red-accent: D01B17;
     --color-blue-accent: 46B1C9;
     --color-orange-accent: E4572E;
     --color-dark-blue: 623CEA;
